Changes in appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,8 +11,8 @@
     "SmtpServer": "smtp-mail.outlook.com",
     "SmtpPort": 587,
     "SmtpFromName": "Job Bank Solution",
-    "SmtpUsername": "manpatel5547@outlook.com",
-    "SmtpPassword": "704982meet"
+    "SmtpUsername": "",
+    "SmtpPassword": ""
   },
   "Logging": {
     "LogLevel": {
